# calibration-code

./: .gitignore  README.md  args.py  compare.py  config.py  dataset.py  eval_recalibrated_runs.py  eval_reliability.py  extract_features.py  lightning_datamodule.py  lightning_module.py  model.py  optimization.py  prep_siim_drain_shortcut_splits.py  pyproject.toml  requirements.txt  scoring.py  siim_acr_preprocessing.py  train.py  utils.py
calibration/: core.py  eval_recalibrated_runs.py  eval_reliability.py  plotting.py
config/: debug.yaml  default.yaml
csv_data_siim/: test_drain_shortcut_aligned.csv  test_drain_shortcut_misaligned.csv  train_drain_shortcut.csv  val_drain_shortcut.csv
methods/: __init__.py  base.py  cdan.py  jtt.py  mmd.py  score_matching.py  score_matching_dataset.py  soft_equalized_odds.py  standard.py  supcon.py
tests/: test_batching.py  test_calibration.py
